--- a/src/css/main.css
+++ b/src/css/main.css
@@ -97,6 +97,10 @@ table .hide {
 	max-width: 150px;
 	max-height: 100px;
 }
+.alert-table .alert-limit-td.middle {
+	max-width: 350px;
+	max-height: 150px;
+}
 .alert-table .alert-limit-td.large {
 	max-width: 460px;
 	max-height: 200px;
